[package]
name = "byte-server"
version = "0.1.0"
authors = ["Neil <neilp1998@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.3"
#env_logger = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "^0.11.1"
log = "0.4.14"
rustyline = "9.1.1"