[package]
name = "byte-server"
version = "0.1.0"
authors = ["Neil <neilp1998@gmail.com>"]
edition = "2018"
default-run = "byte-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "byte-cli"
path = "src/bin/byte-cli.rs"
test = false

[[bin]]
name = "byte-server"
path = "src/bin/byte-server.rs"
test= false

[lib]
doctest = false

[dependencies]
actix-web = "3.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "^0.11.1"
log = "0.4.14"
rustyline = "9.1.1"