[package]
name = "bytes-cli"
version = "0.1.0"
authors = ["Neil <neilp1998@gmail.com>"]
edition = "2018"
default-run = "bytes-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bytes-cli"
path = "src/bin/bytes-cli.rs"
test = false

[lib]
doctest = false

[dependencies]
rustyline = "9.1.1"